<resources>
    <string name="app_name">JLL Users</string>
    <string name="tagline">Real Value in a Changing World</string>
    <string name="conti">CONTINUE AS</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location (City)</string>
    <string name="identity">Aadhar Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree that all the details given above are true to your knowledge.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email ID below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="api_key">changeme</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user">USER</string>
    <string name="registrar">REGISTRAR</string>
    <string name="user_options">USER OPTIONS</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="view_my_assets">VIEW MY ASSETS</string>
    <string name="registrar_options">REGISTRAR OPTIONS</string>
    <string name="land_registration">LAND REGISTRATION</string>
    <string name="asset_modification">ASSET MODIFICATION</string>
    <string name="asset_creation">ASSET CREATION</string>
    <string name="buying_options">BUYING OPTIONS</string>
    <string name="search_by">SEARCH BY</string>
    <string name="city">CITY</string>
    <string name="survey_no">SURVEY NO.</string>
    <string name="view_response_for_requests">VIEW RESPONSE FOR REQUESTS</string>
    <string name="selling_options">SELLING OPTIONS</string>
    <string name="requests">REQUESTS</string>
    <string name="check_for_buy_requests">CHECK FOR BUY REQUESTS</string>
    <string name="locate">Locate</string>
    <string name="office_branch_city">Office Branch (City)</string>
    <string name="asset_registration">ASSET REGISTRATION</string>
    <string name="survey_number">Survey Number</string>
    <string name="document_number">Document Number</string>
    <string name="patta_number">Patta Number</string>
    <string name="dimension">Dimension</string>
    <string name="guideline_value">Guideline Value</string>
    <string name="market_value">Market Value</string>
    <string name="land_type">Land Type</string>
    <string name="approval_type">Approval Type</string>
    <string name="owner">Owner</string>
    <string name="create_asset">CREATE ASSET</string>
    <string name="search">SEARCH</string>
    <string name="modify_asset">MODIFY ASSET</string>
    <string name="land_type_m">Land Type</string>
    <string name="approval_type_m">Approval Type</string>
    <string name="buyer_id">Buyer ID</string>
    <string name="seller_id">Seller ID</string>
    <string name="documents_required">DOCUMENTS REQUIRED</string>
    <string name="parent_document">Parent Document</string>
    <string name="patta">Patta</string>
    <string name="encumbrance_certificate">Encumbrance Certificate</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_survey_no">Enter Survey No.</string>
    <string name="search_by_city">SEARCH BY CITY</string>
    <string name="view_responses">VIEW RESPONSES</string>
    <string name="search_by_survey_no">SEARCH BY SURVEY NO.</string>
    <string name="register_for_sale">REGISTER FOR SALE</string>
    <string name="for_sale_5">For Sale</string>
    <string name="revert_land_sale">REVERT LAND SALE</string>
    <string name="buy_request">BUY REQUEST</string>
    <string name="view_requests">VIEW REQUESTS</string>
</resources>
