<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/tagline"
            android:textColor="#009688"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/conti"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3px"
            android:background="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/Seller"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:layout_margin="20dp"
            android:text="@string/seller"
            android:textColor="#000000"
            android:textSize="17sp"
            android:onClick="goToSeller"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Buyer"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/buyer"
            android:onClick="goToBuyer"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameContainer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>