<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:padding="20dp">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:padding="7dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:padding="4dp"
            android:text="@string/asset_creation"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="5px"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/survey_number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/dno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/document_number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/pno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/patta_number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/dimension"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/dimension"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/gValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/guideline_value"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/mValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/market_value"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <TextView
            android:id="@+id/landType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/land_type"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/landSpinner"
            android:prompt="@string/land_type"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/approval_type"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/approvalSpinner"
            android:prompt="@string/approval_type"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/owner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/owner"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aLoc"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/quantum_ic_arrow_back_grey600_24"
                android:drawableTint="@color/white"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/location"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/assetLoc"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/loginbutton_selector"
                android:drawableStart="@drawable/places_ic_search"
                android:drawableTint="@color/black"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/locate"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>


        <Button
            android:id="@+id/createAsset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/create_asset"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>